deploy: ac92228dd0213312a263dd1a01f8a3702a8e7bb2

--- a/rondleiding-gnome.html
+++ b/rondleiding-gnome.html
@@ -115,17 +115,24 @@
 <li><code>SUPER</code> in te drukken</li>
 </ul>
 <p><img src="img/super-toets.jpeg" alt="" style="width:300px;" /></p>
+<ul>
+<li>de muis naar de linkerbovenhoek van het scherm te bewegen (snelhoek optie onder Multitasken in de instellingen)</li>
+</ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-theme="gaia" style="--theme:gaia;">
 <h3 id="activiteiten-modus-verlaat-u-door">Activiteiten modus verlaat u door</h3>
 <ul>
-<li>op de activiteiten knop linksboven op de bovenbalk te klikken</li>
-</ul>
-<p><img src="img/activiteiten-knop.png" alt="" /></p>
-<ul>
-<li><code>SUPER</code> of <code>ESC</code> in te drukken</li>
+<li>
+<p>op <img src="img/activiteiten-knop.png" alt="" /> linksboven op de bovenbalk te klikken</p>
+</li>
+<li>
+<p><code>SUPER</code> of <code>ESC</code> in te drukken</p>
+</li>
 </ul>
 <p><img src="img/super-toets.jpeg" alt="" style="width:300px;" /> <img src="img/ESC-toets.jpeg" alt="" style="width:300px;" /></p>
+<ul>
+<li>de muis naar de linkerbovenhoek van het scherm te bewegen</li>
+</ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-theme="gaia" style="--theme:gaia;">
 <h3 id="in-activiteiten-modus">In activiteiten modus</h3>
