deploy: c670b7aa90ca518ad33bdc5b184efb462142a5a8

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -1373,7 +1373,7 @@
 <li><p>Type <code>xpdf</code></p></li>
 <li><p>Ga naar de details van xpdf door erop te klikken</p></li>
 <li><p>Klik op “Installeren”</p></li>
-<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Wachtwoord van tux is <code>tux</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Installeren van Chromium</p>
@@ -1382,7 +1382,7 @@
 <li><p>Type <code>chromium web</code></p></li>
 <li><p>Ga naar de details van “Chromium Web Browser” door erop te klikken</p></li>
 <li><p>Klik op “Installeren”</p></li>
-<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Wachtwoord van tux is <code>tux</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Google Chrome installeren vanuit een .deb bestand</p>
@@ -1413,7 +1413,7 @@
 <li><p>Kies “Openen met…”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op “Installeren”</p></li>
-<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Wachtwoord van tux is <code>tux</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 <li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
@@ -1477,7 +1477,7 @@
 <li><p>Klik “Chromium Web Browser” aan</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
 <li><p>Bevestig in het popup-venster dat u Chromium wilt verwijderen</p></li>
-<li><p>Geef het beheerders wachtwoord op. Dat is <code>root</code></p></li>
+<li><p>Geef het wachtwoord van tux. Dat is <code>tux</code></p></li>
 <li><p>Sluit Software af met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Verwijder xpdf</p>
@@ -1487,7 +1487,7 @@
 <li><p>Klik “xpdf” aan</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
 <li><p>Bevestig in het popup-venster dat u xpdf wilt verwijderen</p></li>
-<li><p>Geef het beheerders wachtwoord op. Dat is <code>root</code></p></li>
+<li><p>Geef het wachtwoord van tux. Dat is <code>tux</code></p></li>
 <li><p>Sluit Software af met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Verwijder discord</p>
@@ -1499,7 +1499,7 @@
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
 <li><p>Bevestig in het popup-venster dat u discord wilt verwijderen</p></li>
-<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Wachtwoord van tux is <code>tux</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Verwijder Google Chrome</p>
@@ -1511,7 +1511,7 @@
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
 <li><p>Bevestig in het popup-venster dat u Google Chrome wilt verwijderen</p></li>
-<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Wachtwoord van tux is <code>tux</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Terminal als opstart toepassing toevoegen</p>
