deploy: 2e00c0f114cbb0b93ff44c0813302ac2ee03a213

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -395,7 +395,7 @@
 <ol type="1">
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code>.</p></li>
+<li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a>.</p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
 <li><p>Klik op de koppeling van de HTML versie (tweede kolom) van “Presentaties”</p></li>
 <li><p>Blader door enkele presentaties heen, nu weet u waar u het lesmateriaal online kunt vinden</p></li>
@@ -403,15 +403,15 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar <code>debian.org</code>.</p></li>
+<li><p>Ga naar <a href="http://debian.org"><code>debian.org</code></a>.</p></li>
 <li><p>Open een extra tabblad met <code>CTRL+T</code>, merk op dat u gelijk het webadres kunt intypen. Ga naar <code>tldp.org</code>.</p></li>
 <li><p>Ga terug naar het eerste tabblad door <code>CTRL+TAB</code> in te drukken.</p></li>
 <li><p>Sluit <code>debian.org</code>, met <code>CTRL+W</code>.</p></li>
-<li><p>Sluit de browser af door het laatste tabblad te sluiten</p></li>
+<li><p>Sluit de browser af door het laatste tabblad te sluiten (<code>CTRL+W</code>)</p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code></p></li>
+<li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a></p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
 <li><p>Open de HTML versie (tweede kolom) van Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
 <li><p>Gebruik <code>CTRL+TAB</code> om de twee nieuwe pagina’s te bekijken</p></li>
@@ -426,23 +426,23 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code></p></li>
+<li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a></p></li>
 <li><p>Maak een bladwijzer met <code>CTRL+D</code></p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code></p></li>
-<li><p>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</p></li>
-<li><p>Scroll naar beneden naar de README naar het kopje “Lesmateriaal”</p></li>
-<li><p>Klik op de koppeling van de HTML versie van “Presentaties” (tweede kolom)</p></li>
+<li><p>Ga met behulp van de bladwijzer naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a> (“Linux beginners cursus”)</p></li>
+<li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
+<li><p>Klik op de koppeling van de HTML versie van “Verder leren” (tweede kolom)</p></li>
 <li><p>Maak een bladwijzer door op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> aan de rechterzijde te klikken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de “Presentaties” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
-<li><p>Klik op de HTML versie “Samenvatting” onder het kopje “Lesmateriaal”</p></li>
+<li><p>Ga met behulp van de bladwijzer naar de URL <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a> (“Linux beginners cursus”)</p></li>
+<li><p>Klik op de HTML versie van “Samenvatting” onder het kopje “Lesmateriaal”</p></li>
+<li><p>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</p></li>
 <li><p>Maak een bladwijzer door <img src="img/firefox-slotje.png" width="30" /> naar de bladwijzerbalk te slepen</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -450,33 +450,36 @@
 <ul>
 <li><p>Als de bladwijzerbalk niet zichtbaar is maakt u hem zichtbaar met <code>SHIFT+CTRL+B</code></p></li>
 <li><p>Open het context menu (rechtsklikken) van de bladwijzerbalk en kies “Map toevoegen …” en maak een map “cursus” aan</p></li>
-<li><p>Sleep de drie bladwijzers over de cursus naar deze map</p></li>
+<li><p>Sleep de drie bladwijzers over de cursus naar deze map (“Linux beginners cursus”, “Verder leren” en “Samenvatting voor de Linux beginners cursus”)</p></li>
 <li><p>En orden ze zodanig dat het resultaat er zo uitziet: <img src="img/firefox-bladwijzer-map-cursus-3-items.png" height="100" /></p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de “Presentaties” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
+<li><p>Ga met behulp van de bladwijzer naar de URL <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a> (“Linux beginners cursus”)</p></li>
 <li><p>Ga naar het kopje “Lesmateriaal”</p></li>
 <li><p>Klik met <code>CTRL</code> ingedrukt op de HTML versies van “Oefeningen” en “Begrippenlijst”</p></li>
+<li><p>Als de bladwijzerbalk niet zichtbaar is maakt u hem zichtbaar met <code>SHIFT+CTRL+B</code></p></li>
 <li><p>Breng met behulp van <code>CTRL+TAB</code> de tabbladen 1 voor 1 naar voren en sleep <img src="img/firefox-slotje.png" width="30" /> naar de map “cursus” op de bladwijzerbalk</p></li>
+<li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
-<li><p>Ga naar <code>kernel.org</code></p></li>
+<li><p>Ga naar <a href="https://kernel.org"><code>kernel.org</code></a></p></li>
 <li><p>Maak een bladwijzer met <code>CTRL+D</code></p></li>
-<li><p>Ga naar “Bladwijzers beheren” met <code>CTRL+SHIFT+O</code></p></li>
+<li><p>Ga naar “Bladwijzers beheren” met <code>CTRL+SHIFT+O</code>. Er opent een popup venster met de titel “Bibliotheek”.</p></li>
 <li><p>Selecteer in het linkerpaneel “Bladwijzerbalk”</p></li>
 <li><p>Verwijder de bladwijzer naar <code>kernel.org</code>, door rechts te klikken op de <code>kernel.org</code> bladwijzer en “Bladwijzer verwijderen” te kiezen</p></li>
+<li><p>Sluit het “Bibliotheek” venster met <code>CTRL+W</code></p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Noem drie manieren waarop je een bladwijzer in Firefox kunt maken (er zijn er vier).</p></li>
 <li><p>Noem drie manieren waarop je een bladwijzer in Firefox kunt verwijderen.</p></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
-<li><p>Ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu <img src="img/firefox-hamburgermenu.png" /> rechtbovenin.</p></li>
+<li><p>Ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu <img src="img/firefox-hamburgermenu.png" height="20" /> rechtbovenin.</p></li>
 <li><p>Selecteer aan de linkerzijde van de pagina ‘Extensies’</p></li>
-<li><p>Type in het zoekvak <code>Adblocker Ultimate</code> en installeer deze extensie:</p>
+<li><p>Type in het zoekvak met label “Meer add-ons zoeken” <code>Adblocker Ultimate</code> en installeer deze extensie:</p>
 <ul>
 <li><p>Kies het bovenste zoekresultaat</p></li>
 <li><p>Klik op de blauwe knop met opschrift “Toevoegen aan Firefox”</p></li>
@@ -487,16 +490,16 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus/samenvatting.html</code>.</p></li>
-<li><p>Scroll omlaag naar “Internet browser: Firefox” en dan naar “Extensies installeren”, klik op de koppeling van “I don’t care about cookies”</p></li>
+<li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus/samenvatting.html#internet-browser-firefox"><code>slspeek.github.io/linux-beginners-cursus/samenvatting.html#internet-browser-firefox</code></a>.</p></li>
+<li><p>Scroll omlaag naar “Extensies installeren”, klik op de koppeling van “I don’t care about cookies”</p></li>
 <li><p>Klik op de knop “Toevoegen aan Firefox”</p></li>
 <li><p>Ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
-<li><p>Ga via het hamburgermenu rechtsboven naar ‘Hulp’ en dan naar ‘Hulp verkrijgen’</p></li>
-<li><p>Type <code>navigatiegeschiedenis</code></p></li>
+<li><p>Ga via het hamburgermenu rechtsboven <img src="img/firefox-hamburgermenu.png" height="20" /> naar ‘Hulp’ en dan naar ‘Hulp verkrijgen’</p></li>
+<li><p>Type <code>navigatiegeschiedenis</code> in het zoekvak midden op de pagina</p></li>
 <li><p>Wat betekent geschiedenis in Firefox?</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
