deploy: 4503068542cd2a2dd79b421c8629f4e05918fab7

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 6 februari 2024</p>
+<p class="date">donderdag 29 februari 2024</p>
 </header>
 <h1 id="notatie">Notatie</h1>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -512,6 +512,23 @@
 <li><p>Onder welke map is een aangekoppelde USB-stick terug te vinden?</p></li>
 <li><p>Waarvoor hebt u een bestandsbeheerder nodig (noem vier redenen)?</p></li>
 <li><p>Noem drie manieren waarop u de bestandsbeheerder kunt openen.</p></li>
+<li><p>Een plaatje openen</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Klik in het linker paneel op “Afbeeldingen”</p></li>
+<li><p>Dubbelklik in het grote paneel op de map “bloemen”</p></li>
+<li><p>Dubbelklik in het grote paneel op “akkerdistel.jpeg”</p></li>
+<li><p>Sluit “Afbeeldingsweergave” met <code>ALT+F4</code></p></li>
+<li><p>Sluit de bestandbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>De samenvatting openen</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Klik in het linker paneel op “Downloads”</p></li>
+<li><p>Dubbelklik in het grote paneel op “samenvatting.pdf”</p></li>
+<li><p>Sluit “Documentweergave” met <code>ALT+F4</code></p></li>
+<li><p>Sluit de bestandbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
 <li><p>Wisselen tussen raster- en lijstweergave.</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
@@ -634,6 +651,22 @@
 <li><p>Kies uit het actiemenu (<code>F10</code>) “Prullenbak legen”</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
+<li><p>Gebruik eigenschappen in bestandsbeheerder</p>
+<ul>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Navigeer naar <code>Afbeeldingen</code></p></li>
+<li><p>Hoe groot is de map <code>bloemen</code>.</p>
+<ul>
+<li><p>Selecteer <code>bloemen</code></p></li>
+<li><p>Open het context menu en kies “Eigenschappen”</p></li>
+</ul></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Hoe groot in pixels is het plaatje <code>blaassilene.jpg</code> (<code>Afbeeldingen/bloemen/anjerfamilie</code>)?</p>
+<ul>
+<li><p>Gebruik “Eigenschappen” van het bestand</p></li>
+<li><p>Klik onderaan de “Eigenschappen” popup op “Afbeeldingseigenschappen”</p></li>
+</ul></li>
 <li><p>Bladwijzer van een map maken van één uw projecten</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
@@ -658,22 +691,6 @@
 <li><p>Verwijder de bladwijzers naar de mappen <code>ijzertijd</code> en <code>bronstijd</code> door in het linkerpaneel rechts te klikken op de bladwijzers en uit het menu “Verwijderen uit bladwijzers” te kiezen.</p></li>
 <li><p>Overtuig uzelf ervan dat in de map <code>werkstuk-protohistorie</code> de mappen <code>ijzertijd</code> en <code>bronstijd</code> nog bestaan.</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
-</ul></li>
-<li><p>Gebruik eigenschappen in bestandsbeheerder</p>
-<ul>
-<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Navigeer naar <code>Afbeeldingen</code></p></li>
-<li><p>Hoe groot is de map <code>bloemen</code>.</p>
-<ul>
-<li><p>Selecteer <code>bloemen</code></p></li>
-<li><p>Open het context menu en kies “Eigenschappen”</p></li>
-</ul></li>
-<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
-</ul></li>
-<li><p>Hoe groot in pixels is het plaatje <code>blaassilene.jpg</code> (<code>Afbeeldingen/bloemen/anjerfamilie</code>)?</p>
-<ul>
-<li><p>Gebruik “Eigenschappen” van het bestand</p></li>
-<li><p>Klik onderaan de “Eigenschappen” popup op “Afbeeldingseigenschappen”</p></li>
 </ul></li>
 <li><p>Werkstukje maken over protohistorie.</p>
 <ul>
