--- a/verder-leren.html
+++ b/verder-leren.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Verder leren</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 6 februari 2024</p>
+<p class="date">donderdag 29 februari 2024</p>
 </header>
 <h1 id="aanbevolen-bronnen">Aanbevolen bronnen</h1>
 <p>Alle bronnen die u hier vindt zijn kosteloos.</p>
