deploy: b1f290865712433f85c5740b0e1ac2db70bac253

--- a/begrippen.html
+++ b/begrippen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippenlijst voor Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 29 februari 2024</p>
+<p class="date">maandag 4 maart 2024</p>
 </header>
 <dl>
 <dt>Actiemenu</dt>
