--- a/verder-leren.html
+++ b/verder-leren.html
@@ -23,9 +23,8 @@
 <header id="title-block-header">
 <h1 class="title">Verder leren</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 29 februari 2024</p>
+<p class="date">maandag 4 maart 2024</p>
 </header>
-<h1 id="aanbevolen-bronnen">Aanbevolen bronnen</h1>
 <p>Alle bronnen die u hier vindt zijn kosteloos.</p>
 <h2 id="desktop">Desktop</h2>
 <ol type="1">
