--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,11 +23,11 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 29 februari 2024</p>
+<p class="date">maandag 4 maart 2024</p>
 </header>
-<h1 id="notatie">Notatie</h1>
+<h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
-<h1 id="inleiding">Inleiding</h1>
+<h2 id="inleiding">Inleiding</h2>
 <ol type="1">
 <li><p>Op welke familie van besturingssystemen is Linux gebaseerd?</p></li>
 <li><p>Noem twee sleutelfiguren in het onstaan van Linux.</p></li>
@@ -35,7 +35,7 @@
 <li><p>Noem drie voordelen van vrije software.</p></li>
 <li><p>Uit welke twee onderdelen bestaat een Linux distributie grofweg gezegd?</p></li>
 </ol>
-<h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
+<h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
 <ol type="1">
 <li><p>Aanmelden en afmelden</p>
 <ol type="a">
@@ -218,7 +218,7 @@
 </ol></li>
 </ol></li>
 </ol>
-<h1 id="toepassingen-openen-en-afsluiten">Toepassingen openen en afsluiten</h1>
+<h2 id="toepassingen-openen-en-afsluiten">Toepassingen openen en afsluiten</h2>
 <ol type="1">
 <li><p>Sneltoetsen toevoegen. Open sneltoetsen in de Instellingen door:</p>
 <ol type="a">
@@ -391,8 +391,8 @@
 <li><p>Wat is een gangbare toetscombinatie waarmee een toepassing wordt afgesloten?</p></li>
 <li><p>Waarom is een goed idee om toepassingen die u veel gebruikt aan de dash toe te voegen? (twee redenen)</p></li>
 </ol>
-<h1 id="belangrijke-toepassingen">Belangrijke toepassingen</h1>
-<h2 id="firefox">Firefox</h2>
+<h2 id="belangrijke-toepassingen">Belangrijke toepassingen</h2>
+<h3 id="firefox">Firefox</h3>
 <ol type="1">
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
@@ -505,7 +505,7 @@
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 </ol>
-<h2 id="bestanden">Bestanden</h2>
+<h3 id="bestanden">Bestanden</h3>
 <ol type="1">
 <li><p>Wat is het pad van de thuismap van gebruiker tux?</p></li>
 <li><p>Wat is het map scheidingsteken op Linux?</p></li>
@@ -769,7 +769,7 @@
 <li><p>Met welke sneltoets kunt u in één keer naar uw persoonlijke map terugkeren?</p></li>
 <li><p>Met welke sneltoets kunt terug gaan naar de lokatie waar u was? En met welke weer vooruit (<em>Hint: dit heet “Ga terug” en “Ga verder”</em>)? Probeer dit uitvoerig uit. U opent de bestandsbeheerder en gaat naar <code>Documenten</code> en dan naar <code>Afbeeldingen/Schermafdrukken</code> en probeert de gevonden sneltoetsen uit.</p></li>
 </ol>
-<h1 id="vensters-en-werkbladen">Vensters en werkbladen</h1>
+<h2 id="vensters-en-werkbladen">Vensters en werkbladen</h2>
 <ol type="1">
 <li><p>Wisselen tussen twee toepassingen op één werkblad</p>
 <ul>
@@ -1162,7 +1162,7 @@
 <li><p>Volg de stappen van “terugzetten van de originele achtergrond” van de vorige opgave</p></li>
 </ul></li>
 </ol>
-<h1 id="instellingen">Instellingen</h1>
+<h2 id="instellingen">Instellingen</h2>
 <ol type="1">
 <li><p>Op welke manieren kun je instellingen openen? Noem er drie (er zijn er minstens vier).</p></li>
 <li><p>Stel donker thema in</p>
@@ -1378,7 +1378,7 @@
 <li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
 </ul></li>
 </ol>
-<h1 id="toepassingen-installeren">Toepassingen installeren</h1>
+<h2 id="toepassingen-installeren">Toepassingen installeren</h2>
 <ol type="1">
 <li><p>Welke toepassing moet u starten om updates uit te voeren?</p></li>
 <li><p>Bladeren in Software</p>
