deploy: a224cfbf9214f2aca509cd89ea54a96c1f8c20d9

--- a/instellingen.html
+++ b/instellingen.html
@@ -18,6 +18,9 @@
 <p>Schermbeveiliging uitschakelen</p>
 </li>
 <li>
+<p>Snelhoek uitschakelen</p>
+</li>
+<li>
 <p>Nachtlicht inschakelen</p>
 </li>
 <li>
