--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 4 maart 2024</p>
+<p class="date">maandag 11 maart 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -1192,9 +1192,11 @@
 <li><p>Open instellingen met <code>SUPER+I</code></p></li>
 <li><p>Selecteer in het linkerpaneel “Schermen”</p></li>
 <li><p>Selecteer aan de rechterzijde “Nachtlicht”</p></li>
+<li><p>Schakel het nachtlicht in</p></li>
 <li><p>Schakel handmatige planning in</p></li>
 <li><p>Stel de tijden in op 10:00 tot 22:00</p></li>
-<li><p>Schakel het nachtlicht in</p></li>
+<li><p>Zie wat het effect van de nachtlicht instelling is</p></li>
+<li><p>Zet de planning van “Handmatige planning” weer terug op “Zonsondergang tot zonsopgang”</p></li>
 <li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Schakel het nachtlicht uit via het systeemmenu</p></li>
@@ -1239,7 +1241,8 @@
 <li><p><code>42,-</code></p></li>
 </ul></li>
 </ul></li>
-<li><p>Sla het document op onder de naam “zoekvak.txt” in “Documenten”</p></li>
+<li><p>Sla het document op (<code>CTRL+S</code>) onder de naam “zoekvak.txt” in “Documenten”</p></li>
+<li><p>Sluit het gemaakte document met <code>CTRL+W</code></p></li>
 <li><p>Sluit de tekstbewerker met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Speciale tekens invoeren via “Tekens en symbolen” <img src="img/tekens-symbolen-icon.png" height="25" /></p>
@@ -1276,7 +1279,8 @@
 <li><p>Type <code>42,-</code></p></li>
 </ul></li>
 </ul></li>
-<li><p>Sla het document op onder de naam “tekens-en-symbolen.txt” in “Documenten”</p></li>
+<li><p>Sla het document op (<code>CTRL+S</code>) onder de naam “tekens-en-symbolen.txt” in “Documenten”</p></li>
+<li><p>Sluit het gemaakte document met <code>CTRL+W</code></p></li>
 <li><p>Sluit de tekstbewerker met <code>ALT+F4</code></p></li>
 <li><p>Sluit “Tekens en symbolen” met <code>ALT+F4</code></p></li>
 </ul></li>
@@ -1301,7 +1305,8 @@
 <li><code>RECHTER_ALT = c</code> en type dan <code>42,-</code></li>
 </ul></li>
 </ul></li>
-<li><p>Sla het document op onder de naam “samensteltoets.txt” in “Documenten”</p></li>
+<li><p>Sla het document (<code>CTRL+S</code>) op onder de naam “samensteltoets.txt” in “Documenten”.</p></li>
+<li><p>Sluit het gemaakte document met <code>CTRL+W</code></p></li>
 <li><p>Sluit de tekstbewerker met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Gebruikers plaatje wijzigen</p>
