deploy: 29b818c1dd5bb669c89a676839e09bab95f29273

--- a/index.html
+++ b/index.html
@@ -56,9 +56,19 @@
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">Printbare versie</a></td>
 </tr>
 <tr class="odd">
+<td>Begrippen per onderdeel</td>
+<td><a href="begrippen-per-onderdeel.html">HMTL versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen-per-onderdeel.pdf">Printbare versie</a></td>
+</tr>
+<tr class="even">
 <td>Sneltoetsen kaart</td>
 <td></td>
 <td><a href="https://github.com/slspeek/debian-gnome-sneltoetsen/releases/latest/download/debian-gnome-sneltoetsen.pdf">Printbare versie</a></td>
+</tr>
+<tr class="odd">
+<td>Sneltoetsen per onderdeel</td>
+<td><a href="sneltoetsen-per-onderdeel.html">HMTL versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/sneltoetsen-per-onderdeel.pdf">Printbare versie</a></td>
 </tr>
 <tr class="even">
 <td>Verder leren</td>
@@ -68,16 +78,66 @@
 </tbody>
 </table>
 <h3 id="presentaties">Presentaties</h3>
-<ol type="1">
-<li><p><a href="inleiding.html">Inleiding</a></p></li>
-<li><p><a href="rondleiding-gnome.html">Rondleiding GNOME</a></p></li>
-<li><p><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></p></li>
-<li><p><a href="firefox.html">Firefox</a></p></li>
-<li><p><a href="bestanden.html">Bestanden</a></p></li>
-<li><p><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></p></li>
-<li><p><a href="instellingen.html">Instellingen</a></p></li>
-<li><p><a href="toepassingen-installeren.html">Toepassingen installeren</a></p></li>
-</ol>
+<table>
+<thead>
+<tr class="header">
+<th>Les</th>
+<th>Presentatie</th>
+<th>Oefeningen</th>
+<th>Samenvatting</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td><a href="inleiding.html">Inleiding</a></td>
+<td><a href="oefeningen.html#inleiding">Oefeningen</a></td>
+<td><a href="samenvatting.html#inleiding">Samenvatting</a></td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
+<td><a href="oefeningen.html#rondleiding-gnome">Oefeningen</a></td>
+<td><a href="samenvatting.html#rondleiding-gnome">Samenvatting</a></td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
+<td><a href="oefeningen.html#toepassingen-starten-en-stoppen">Oefeningen</a></td>
+<td><a href="samenvatting.html#toepassingen-starten-en-stoppen">Samenvatting</a></td>
+</tr>
+<tr class="even">
+<td>4</td>
+<td><a href="firefox.html">Firefox</a></td>
+<td><a href="oefeningen.html#firefox">Oefeningen</a></td>
+<td><a href="samenvatting.html#firefox">Samenvatting</a></td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td><a href="bestanden.html">Bestanden</a></td>
+<td><a href="oefeningen.html#bestanden">Oefeningen</a></td>
+<td><a href="samenvatting.html#bestanden">Samenvatting</a></td>
+</tr>
+<tr class="even">
+<td>6</td>
+<td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
+<td><a href="oefeningen.html#vensters-en-werkbladen">Oefeningen</a></td>
+<td><a href="samenvatting.html#vensters-en-werkbladen">Samenvatting</a></td>
+</tr>
+<tr class="odd">
+<td>7</td>
+<td><a href="instellingen.html">Instellingen</a></td>
+<td><a href="oefeningen.html#instellingen">Oefeningen</a></td>
+<td><a href="samenvatting.html#instellingen">Samenvatting</a></td>
+</tr>
+<tr class="even">
+<td>8</td>
+<td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
+<td><a href="oefeningen.html#toepassingen-installeren">Oefeningen</a></td>
+<td><a href="samenvatting.html#toepassingen-installeren">Samenvatting</a></td>
+</tr>
+</tbody>
+</table>
 <h2 id="broncode">Broncode</h2>
 <p>De broncode van Linux beginners cursus bevindt zich op het volgende URL: <a href="https://github.com/slspeek/linux-beginners-cursus"><code>https://github.com/slspeek/linux-beginners-cursus</code></a>.</p>
 </body>
