--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 11 maart 2024</p>
+<p class="date">maandag 18 maart 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -218,7 +218,7 @@
 </ol></li>
 </ol></li>
 </ol>
-<h2 id="toepassingen-openen-en-afsluiten">Toepassingen openen en afsluiten</h2>
+<h2 id="toepassingen-starten-en-afsluiten">Toepassingen starten en afsluiten</h2>
 <ol type="1">
 <li><p>Sneltoetsen toevoegen. Open sneltoetsen in de Instellingen door:</p>
 <ol type="a">
@@ -826,7 +826,7 @@
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
 <li><p>Ga via activiteiten naar het werkblad rechts van het huidige werkblad</p>
 <ul>
-<li><code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code></li>
+<li><code>SUPER PageDown SUPER</code></li>
 </ul></li>
 <li><p>Open bestandsbeheer <code>SUPER+E</code></p></li>
 <li><p>Wissel terug naar Firefox met <code>ALT+TAB</code></p>
@@ -857,12 +857,12 @@
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
 <li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
 <li><p>Open een extra writer venster met <code>CTRL+N</code></p></li>
-<li><p>Ga naar het werkblad rechts van dit werkblad via activiteiten: <code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code></p></li>
+<li><p>Ga naar het werkblad rechts van dit werkblad via activiteiten: <code>SUPER PageDown SUPER</code></p></li>
 <li><p>Open Hulp <code>SUPER+6</code></p></li>
 <li><p>Open Software <code>SUPER+5</code></p></li>
 <li><p>Wissel nu terug naar Hulp met <code>ALT+ESC</code></p></li>
 <li><p>Wissel terug naar Software met <code>ALT+ESC</code></p></li>
-<li><p>Ga terug naar het eerste werkblad met <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code></p></li>
+<li><p>Ga terug naar het eerste werkblad met <code>SUPER PageUp SUPER</code></p></li>
 <li><p>Wissel met <code>ALT+ESC</code> naar het “Geen titel 1” venster van writer</p></li>
 <li><p>Wissel met <code>ALT+[ESC ESC]</code> naar Firefox</p></li>
 <li><p>Geef driemaal <code>ALT+F4</code> om de drie vensters op het eerste werkblad te sluiten</p></li>
@@ -875,11 +875,11 @@
 <li><p>Open LibreOffice writer <code>SUPER+3</code></p></li>
 <li><p>Open een extra writer venster met <code>CTRL+N</code></p></li>
 <li><p>Ga met “Geen titel 2” naar het werkblad rechts van deze door <code>SUPER+SHIFT+PageDown</code> te geven</p></li>
-<li><p>Ga terug naar het eerste werkblad met <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code></p></li>
+<li><p>Ga terug naar het eerste werkblad met <code>SUPER PageUp SUPER</code></p></li>
 <li><p>Welke venters staan hier?</p></li>
-<li><p>Ga weer terug naar het tweede werkblad met <code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code></p></li>
+<li><p>Ga weer terug naar het tweede werkblad met <code>SUPER PageDown SUPER</code></p></li>
 <li><p>Welke venster staat hier?</p></li>
-<li><p>Sluit al deze vensters met <code>ALT+F4</code> zonder de muis te gebruiken (<em>Hint</em>: <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code> )</p></li>
+<li><p>Sluit al deze vensters met <code>ALT+F4</code> zonder de muis te gebruiken (<em>Hint</em>: <code>SUPER PageUp SUPER</code> )</p></li>
 </ul></li>
 <li><p>Venster verplaatsen naar ander werkblad via venstermenu</p>
 <ul>
@@ -892,7 +892,7 @@
 <li><p>Welk venster staat daar?</p></li>
 <li><p>Ga terug naar het eerste werkblad met <code>SUPER</code>, <code>PageUp</code>, <code>SUPER</code></p></li>
 <li><p>Welke venters staan hier?</p></li>
-<li><p>Sluit al deze vensters met <code>ALT+F4</code> zonder de muis te gebruiken (<em>Hint</em>: <code>SUPER</code>, <code>PageDown</code>, <code>SUPER</code> )</p></li>
+<li><p>Sluit al deze vensters met <code>ALT+F4</code> zonder de muis te gebruiken (<em>Hint</em>: <code>SUPER PageDown SUPER</code> )</p></li>
 </ul></li>
 <li><p>In activiteiten modus focus wisselen tussen elementen</p>
 <ul>
