deploy: 7afce40bdddb7e16076f2944cdaa63095d6135e9

--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -26,7 +26,22 @@
 <p class="date">maandag 18 maart 2024</p>
 </header>
 <h2 id="inleiding">Inleiding</h2>
+<ul>
+<li><p>Besturingssysteem</p></li>
+<li><p>Open source software</p></li>
+</ul>
 <h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
+<ul>
+<li><p>Activiteiten modus</p></li>
+<li><p>Activiteiten knop</p></li>
+<li><p>Applicatie modus</p></li>
+<li><p>Bovenbalk</p></li>
+<li><p>Dash</p></li>
+<li><p>Desktop manager</p></li>
+<li><p>Notificatie venster</p></li>
+<li><p>SUPER</p></li>
+<li><p>Systeemmenu</p></li>
+</ul>
 <h2 id="toepassingen-starten-en-afsluiten">Toepassingen starten en afsluiten</h2>
 <h2 id="firefox">Firefox</h2>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
