--- a/rondleiding-gnome.html
+++ b/rondleiding-gnome.html
@@ -307,7 +307,7 @@ bestaat uit</p>
 <ul>
 <li>gaan naar pauzestand</li>
 <li>herstarten</li>
-<li>afsluiten (<code>ALT+CTRL+DEL</code>)</li>
+<li>afsluiten (<code>CTRL+ALT+DELETE</code>)</li>
 <li>afmelden</li>
 </ul>
 </li>
@@ -341,7 +341,7 @@ bestaat uit</p>
 <h3 id="uitschakelen">Uitschakelen</h3>
 <p>Om de computer af te sluiten</p>
 <ul>
-<li>drukt u op <code>ALT+CTRL+DELETE</code></li>
+<li>drukt u op <code>CTRL+ALT+DELETE</code></li>
 <li>klikt u in het systeemmenu <img src="img/systeem-menu-gesloten.png" alt="" /> op <img src="img/afsluit-menu-knop.png" alt="" /> en dan op &quot;Uitschakelen&quot;<br />
 </li>
 <li><code>SUPER uits ENTER</code></li>
