--- a/sneltoetsen-per-onderdeel.html
+++ b/sneltoetsen-per-onderdeel.html
@@ -25,8 +25,61 @@
 <p class="author">Steven Speek</p>
 <p class="date">maandag 18 maart 2024</p>
 </header>
-<h2 id="inleiding">Inleiding</h2>
 <h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
+<table>
+<thead>
+<tr class="header">
+<th>Sneltoets</th>
+<th>Functie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>SUPER+L</code></td>
+<td>Schermbeveiliging inschakelen</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+F1</code></td>
+<td>Hulp openen</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+S</code></td>
+<td>Zoeken in hulp</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+F</code></td>
+<td>Zoeken op 1 pagina</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER</code></td>
+<td>Activiteiten modus in/uit</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+A</code></td>
+<td>Applicatie modus in</td>
+</tr>
+<tr class="odd">
+<td><code>ESCAPE</code></td>
+<td>Verlaten/annuleren</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+V</code></td>
+<td>Notificatie venster tonen/verbergen</td>
+</tr>
+<tr class="odd">
+<td><code>PrintScreen</code></td>
+<td>Schermafdruk maken</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+ALT+SHIFT+R</code></td>
+<td>Screenrecording maken</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+ALT+DELETE</code></td>
+<td>Computer uitschakelen</td>
+</tr>
+</tbody>
+</table>
 <h2 id="toepassingen-starten-en-afsluiten">Toepassingen starten en afsluiten</h2>
 <h2 id="firefox">Firefox</h2>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
