--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 <th>Presentatie</th>
 <th>Oefeningen</th>
 <th>Samenvatting</th>
+<th>Begrippen</th>
+<th>Sneltoetsen</th>
 </tr>
 </thead>
 <tbody>
@@ -93,48 +95,64 @@
 <td><a href="inleiding.html">Inleiding</a></td>
 <td><a href="oefeningen.html#inleiding">Oefeningen</a></td>
 <td><a href="samenvatting.html#inleiding">Samenvatting</a></td>
+<td><a href="begrippen-per-onderdeel.html#inleiding">Begrippen</a></td>
+<td></td>
 </tr>
 <tr class="even">
 <td>2</td>
 <td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
 <td><a href="oefeningen.html#rondleiding-gnome">Oefeningen</a></td>
 <td><a href="samenvatting.html#rondleiding-gnome">Samenvatting</a></td>
+<td><a href="begrippen-per-onderdeel.html#rondleiding-gnome">Begrippen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#rondleiding-gnome">Sneltoetsen</a></td>
 </tr>
 <tr class="odd">
 <td>3</td>
 <td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
 <td><a href="oefeningen.html#toepassingen-starten-en-stoppen">Oefeningen</a></td>
 <td><a href="samenvatting.html#toepassingen-starten-en-stoppen">Samenvatting</a></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td>4</td>
 <td><a href="firefox.html">Firefox</a></td>
 <td><a href="oefeningen.html#firefox">Oefeningen</a></td>
 <td><a href="samenvatting.html#firefox">Samenvatting</a></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td>5</td>
 <td><a href="bestanden.html">Bestanden</a></td>
 <td><a href="oefeningen.html#bestanden">Oefeningen</a></td>
 <td><a href="samenvatting.html#bestanden">Samenvatting</a></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td>6</td>
 <td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
 <td><a href="oefeningen.html#vensters-en-werkbladen">Oefeningen</a></td>
 <td><a href="samenvatting.html#vensters-en-werkbladen">Samenvatting</a></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="odd">
 <td>7</td>
 <td><a href="instellingen.html">Instellingen</a></td>
 <td><a href="oefeningen.html#instellingen">Oefeningen</a></td>
 <td><a href="samenvatting.html#instellingen">Samenvatting</a></td>
+<td></td>
+<td></td>
 </tr>
 <tr class="even">
 <td>8</td>
 <td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
 <td><a href="oefeningen.html#toepassingen-installeren">Oefeningen</a></td>
 <td><a href="samenvatting.html#toepassingen-installeren">Samenvatting</a></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table>
