--- a/begrippen.html
+++ b/begrippen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippenlijst voor Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 18 maart 2024</p>
+<p class="date">donderdag 21 maart 2024</p>
 </header>
 <dl>
 <dt>Actiemenu</dt>
@@ -91,9 +91,6 @@
 <dl>
 <dt>Desktop manager</dt>
 <dd><p>Systeemprogramma dat het bureaublad beheert en andere programma’s kan openen en sluiten. Tevens regelt het de plaatsing van vensters.</p>
-</dd>
-<dt>Display manager</dt>
-<dd><p>Graphisch inlogscherm. Als een geldige gebruikersnaam en wachtwoord wordt ingevoerd wordt daarna een bureaublad getoond.</p>
 </dd>
 <dt>Filesystem Hierarchy Standard</dt>
 <dd><p>Afspraak die op UNIX vastlegt wat in welke map dient te staan. Bijvoorbeeld:</p>
