--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
 </table>
 <h3 id="presentaties">Presentaties</h3>
 <table>
+<colgroup>
+<col style="width: 7%" />
+<col style="width: 12%" />
+<col style="width: 23%" />
+<col style="width: 23%" />
+<col style="width: 14%" />
+<col style="width: 18%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Les</th>
@@ -109,10 +117,10 @@
 <tr class="odd">
 <td>3</td>
 <td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
-<td><a href="oefeningen.html#toepassingen-starten-en-stoppen">Oefeningen</a></td>
-<td><a href="samenvatting.html#toepassingen-starten-en-stoppen">Samenvatting</a></td>
-<td></td>
-<td></td>
+<td><a href="oefeningen.html#toepassingen-starten-en-afsluiten">Oefeningen</a></td>
+<td><a href="samenvatting.html#toepassingen-starten-en-afsluiten">Samenvatting</a></td>
+<td><a href="begrippen-per-onderdeel.html#toepassingen-starten-en-afsluiten">Begrippen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#toepassingen-starten-en-afsluiten">Sneltoetsen</a></td>
 </tr>
 <tr class="even">
 <td>4</td>
