--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 18 maart 2024</p>
+<p class="date">donderdag 21 maart 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
