--- a/toepassingen-starten-en-afsluiten.html
+++ b/toepassingen-starten-en-afsluiten.html
@@ -223,6 +223,7 @@ Indien u het laatste open venster van een toepassing sluit, sluit u ook de toepa
 <li>via het toepassingsmenu</li>
 <li>via de toepassing zelf (bestandsmenu)</li>
 <li>in applicatie modus het icon naar een werkblad slepen</li>
+<li>vaak sneltoets <code>CTRL+N</code></li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="33" data-theme="gaia" style="--theme:gaia;">
