--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 18 maart 2024</p>
+<p class="date">donderdag 21 maart 2024</p>
 </header>
 <h2 id="inleiding">Inleiding</h2>
 <ul>
@@ -39,10 +39,19 @@
 <li><p>Dash</p></li>
 <li><p>Desktop manager</p></li>
 <li><p>Notificatie venster</p></li>
-<li><p>SUPER</p></li>
+<li><p>Super toets</p></li>
 <li><p>Systeemmenu</p></li>
 </ul>
 <h2 id="toepassingen-starten-en-afsluiten">Toepassingen starten en afsluiten</h2>
+<ul>
+<li><p>Activiteiten modus</p></li>
+<li><p>Applicatie modus</p></li>
+<li><p>Dash</p></li>
+<li><p>Focus</p></li>
+<li><p>Super toets</p></li>
+<li><p>Toepassing</p></li>
+<li><p>Zoekvak</p></li>
+</ul>
 <h2 id="firefox">Firefox</h2>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
 <h2 id="vensters-en-werkbladen">Vensters en werkbladen</h2>
