--- a/sneltoetsen-per-onderdeel.html
+++ b/sneltoetsen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Sneltoetsen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 18 maart 2024</p>
+<p class="date">donderdag 21 maart 2024</p>
 </header>
 <h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
 <table>
@@ -81,6 +81,72 @@
 </tbody>
 </table>
 <h2 id="toepassingen-starten-en-afsluiten">Toepassingen starten en afsluiten</h2>
+<table>
+<thead>
+<tr class="header">
+<th>Sneltoets</th>
+<th>Functie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>SUPER</code></td>
+<td>Activiteiten modus in/uit</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+A</code></td>
+<td>Applicatie modus in</td>
+</tr>
+<tr class="odd">
+<td><code>ESCAPE</code></td>
+<td>Verlaten/annuleren</td>
+</tr>
+<tr class="even">
+<td><code>SUPER &lt;naam programma&gt; ENTER</code></td>
+<td>Start &lt;naam programma&gt;</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+1</code></td>
+<td>Firefox</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+3</code></td>
+<td>Writer</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+E</code></td>
+<td></td>
+</tr>
+<tr class="even">
+<td><code>SUPER+4</code></td>
+<td>Bestandsbeheer</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+5</code></td>
+<td>Software</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+ALT+T</code></td>
+<td>Terminal</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+F10</code></td>
+<td>Toepassingsmenu openen</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+N</code></td>
+<td>Nieuw venster openen</td>
+</tr>
+<tr class="odd">
+<td><code>ALT+F4</code></td>
+<td>Venster sluiten</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+Q</code></td>
+<td>Toepassing afsluiten</td>
+</tr>
+</tbody>
+</table>
 <h2 id="firefox">Firefox</h2>
 <h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
 <h2 id="vensters-en-werkbladen">Vensters en werkbladen</h2>
